# smartos-lx-img-builder

./: .gitignore  Cargo.toml  README.md
files/: fstab
guest/etc/systemd/system/: joyent.service
guest/lib/smartdc/: alpine  joyent_rc.local
guest/sbin/: shutdown
src/: actions.rs  cli.rs  guest.rs  main.rs  manifest.rs  utils.rs
